--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 MINICONDA_VERSION=4.7.12
 
 CATE_VERSION=2.1.0.dev0
-CATE_BUILD=9
-CATE_BRANCH=master_dev_3
-CATE_USER_NAME=root
-CATE_PYTHON_BASE_VERSION=0.1
-CATE_PYTHON_DEPS_VERSION=0.1
+CATE_BUILD=15
+CATE_BRANCH=suvi-cate-dirtyfix-baseurl-k8s
+CATE_USER_NAME=cate
