--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MINICONDA_VERSION=4.7.12
 
 CATE_VERSION=2.1.0.dev0
-CATE_BRANCH=suvi-cate-dirtyfix-baseurl-k8s
+CATE_BRANCH=master
 CATE_USER_NAME=cate
 CATE_DOCKER_BUILD=.build19
