--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MINICONDA_VERSION=4.7.12
 
-CATE_VERSION=2.1.0.dev0
+CATE_VERSION=2.1.0.dev1
 CATE_BRANCH=master
 CATE_USER_NAME=cate
-CATE_DOCKER_BUILD=.build20
+CATE_DOCKER_BUILD=
