Corrected version setting

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MINICONDA_VERSION=4.7.12
 
-CATE_VERSION=2.1.0.dev4
+CATE_VERSION=2.1.0
 CATE_BRANCH=master
 CATE_USER_NAME=cate
-CATE_DOCKER_BUILD=
+CATE_DOCKER_BUILD=.dev4
 
