Updated cate docker compose and simplified cate image configurations

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 MINICONDA_VERSION=4.7.12
 
-CATE_VERSION=2.1.0
-CATE_BRANCH=master
+CATE_VERSION=2.1.0.dev2
 CATE_USER_NAME=cate
-CATE_DOCKER_BUILD=.dev4
+CATE_DOCKER_VERSION=0.1.0
 
