--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,12 @@ services: docker
 
 before_script:
   - docker login -u $QUAY_USER -p $QUAY_PASSWORD quay.io
+  - pip install shyaml
+
 script:
-  - docker-compose build
+  - for svc in $(cat docker-compose.yml | shyaml keys  services)
+      do docker-compose build $svc && docker-compose push $svc
+    done
 
 deploy:
   provider: script
