--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services: docker
 
 before_script:
   - docker login -u $QUAY_USER -p $QUAY_PASSWORD quay.io
-  - pip install shyaml
+  - pip install --user shyaml
 
 script:
   - for svc in $(cat docker-compose.yml | shyaml keys  services)
