--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_script:
   - pip install --user shyaml
 
 script:
-  - for svc in $(cat docker-compose.yml | shyaml keys  services)
-      do docker-compose build $svc && docker-compose push $svc
-    done
+  - for svc in $(cat docker-compose.yml | shyaml keys  services);
+      do docker-compose build $svc && docker-compose push $svc;
+    done;
 
 deploy:
   provider: script
