--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MINICONDA_VERSION=4.7.12
 
-CATE_VERSION=2.1.0.dev4
+CATE_VERSION=2.1.0.dev6
+CATE_WEBUI_VERSION=2.1.0.dev.6
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=0.1.0
 
