Renamed docker files. The extension dockerfile is automatically accepted by intellij

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-MINICONDA_VERSION=4.7.12
+MINICONDA_VERSION=4.8.2
 
-CATE_VERSION=2.1.0.dev4
+CATE_VERSION=2.1.0
+CATE_WEBUI_VERSION=2.1.0
 CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=0.1.0
+CATE_DOCKER_VERSION=0.1.1
 
