--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-MINICONDA_VERSION=4.8.2
+MINICONDA_VERSION=4.7.12
 
-CATE_VERSION=2.1.0
-CATE_WEBUI_VERSION=2.1.0
+CATE_IS_STAGE=1
+
+CATE_VERSION=2.1.1.dev1
+CATE_WEBUI_VERSION=2.1.0-dev.1
 CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=0.1.2
+CATE_DOCKER_VERSION=0.1.3
 
