--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
         - CATE_VERSION=${CATE_VERSION}
         - CATE_DOCKER_VERSION=${CATE_DOCKER_VERSION}
         - CATE_USER_NAME=${CATE_USER_NAME}
+        - CATE_IS_STAGE=${CATE_IS_STAGE}
+        - MINICONDA_VERSION=${MINICONDA_VERSION}
     image: quay.io/bcdev/cate:${CATE_VERSION}
     ports:
       - 4000:4000
@@ -48,6 +50,7 @@ services:
           - CATE_VERSION=${CATE_VERSION}
           - CATE_WEBUI_VERSION=${CATE_WEBUI_VERSION}
           - CATE_USER_NAME=${CATE_USER_NAME}
+          - CATE_IS_STAGE=${CATE_IS_STAGE}
       image: quay.io/bcdev/cate-webui:${CATE_WEBUI_VERSION}
       ports:
         - "82:80"
