Changed K8s to jupyter docker image

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 MINICONDA_VERSION=4.8.2
-
-CATE_IS_STAGE=1
+JUPYTER_VERSION=0.9.6
 
 CATE_VERSION=2.1.1.dev1
-CATE_WEBUI_VERSION=2.1.0-dev.1
+CATE_WEBUI_VERSION=2.1.1-dev.1
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=0.1.3
 
