--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MINICONDA_VERSION=4.8.2
 JUPYTER_VERSION=0.9.6
 
-CATE_VERSION=2.1.1.dev1
-CATE_WEBUI_VERSION=2.1.1-dev.1
+CATE_VERSION=2.1.0
+CATE_WEBUI_VERSION=2.1.0
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=0.1.3
 
