--- a/.env.webui
+++ b/.env.webui
@@ -1,1 +1,14 @@
+SKIP_PREFLIGHT_CHECK=true
+
+REACT_APP_KEYCLOAK_URL=https://cate-auth.brockmann-consult.de/auth
+REACT_APP_KEYCLOAK_REALM=cate
+REACT_APP_KEYCLOAK_CLIENT_ID=cate-webui
+REACT_APP_MAX_NUM_USERS=50
+
+
 REACT_APP_HUB_SERVER_BASE=https://catehub.brockmann-consult.de
+
+
+REACT_APP_CATEHUB_ENDPOINT=https://catehub.brockmann-consult.de
+REACT_APP_CATEHUB_WEBAPI_MANAG_PATH=/user/{username}/webapi
+REACT_APP_CATEHUB_WEBAPI_COUNT_PATH=/webapi/count
