--- a/.env.webui
+++ b/.env.webui
@@ -1,14 +1,20 @@
+# TODO: document me
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_KEYCLOAK_URL=https://cate-auth.brockmann-consult.de/auth
+# TODO: document me
+REACT_APP_KEYCLOAK_URL=https://192-171-139-82.sslip.io/auth
 REACT_APP_KEYCLOAK_REALM=cate
 REACT_APP_KEYCLOAK_CLIENT_ID=cate-webui
-REACT_APP_MAX_NUM_USERS=50
 
+# If this is set, CateHub access will be disabled.
+# Its value is a reason message.
+# REACT_APP_CATEHUB_MAINTENANCE=Sorry, the Cate cloud service is temporarily unavailable due to maintenance. However, you can still use a local service.
 
-REACT_APP_HUB_SERVER_BASE=https://catehub.brockmann-consult.de
+# Set maximum number of concurrent users
+# REACT_APP_MAX_NUM_USERS=50
 
-
-REACT_APP_CATEHUB_ENDPOINT=https://catehub.brockmann-consult.de
+# TODO: document me
+REACT_APP_CATEHUB_ENDPOINT=https://stage.catehub.brockmann-consult.de
 REACT_APP_CATEHUB_WEBAPI_MANAG_PATH=/user/{username}/webapi
+REACT_APP_CATEHUB_WEBAPI_CLOSE_PATH=/user/{username}/webapi/shutdown
 REACT_APP_CATEHUB_WEBAPI_COUNT_PATH=/webapi/count
