--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MINICONDA_VERSION=4.8.2
 JUPYTER_VERSION=1.1.0
 
-CATE_VERSION=2.1.3
-CATE_WEBUI_VERSION=2.2.0
+CATE_VERSION=2.1.5.dev2
+CATE_WEBUI_VERSION=2.2.2-dev.4
 CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=2.0.0
+CATE_DOCKER_VERSION=2.0.1
 
