- Added a cate base image configuration - Cate releases are now installed from ccitools conda repo - Added browserslist update to webui docker config - Docker repos are now hosted in bcdev's organisation `ccitools`

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 MINICONDA_VERSION=4.8.2
 JUPYTER_VERSION=1.1.0
 
-CATE_VERSION=2.1.5.dev2
-CATE_WEBUI_VERSION=2.2.2-dev.4
+CATE_BASE_VERSION=2.1.0
+CATE_VERSION=2.1.5.dev3
+CATE_WEBUI_VERSION=2.2.2-dev.5
 CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=2.0.1
+CATE_DOCKER_VERSION=2.0.2
 
