- Updated cate version to dev5 - Updated cate-app version to dev6

--- a/.env.webui
+++ b/.env.webui
@@ -14,7 +14,7 @@ REACT_APP_KEYCLOAK_CLIENT_ID=cate-webui
 # REACT_APP_MAX_NUM_USERS=50
 
 # TODO: document me
-REACT_APP_CATEHUB_ENDPOINT=https://stage.catehub.brockmann-consult.de
+REACT_APP_CATEHUB_ENDPOINT=https://stage.catehub.climate.esa.int
 REACT_APP_CATEHUB_WEBAPI_MANAG_PATH=/user/{username}/webapi
 REACT_APP_CATEHUB_WEBAPI_CLOSE_PATH=/user/{username}/webapi/shutdown
 REACT_APP_CATEHUB_WEBAPI_COUNT_PATH=/webapi/count
