--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ MINICONDA_VERSION=4.8.2
 JUPYTER_VERSION=1.1.0
 
 CATE_BASE_VERSION=2.1.0
-CATE_VERSION=2.1.5.dev5
-CATE_APP_VERSION=2.2.2-dev.6
+CATE_VERSION=2.1.5
+CATE_APP_VERSION=2.2.2
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=2.0.2
 
