--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 script:
   - docker-compose build cate
   - docker-compose build cate-jupyter
-  - docker-compose build cate-webui
+  - docker-compose build cate-app
 
 deploy:
   provider: script
