- Set versions to dev versions - Separated stage and prod images for teh cate-app - Added install scripts for cate, xcube and xcube-cci - Introduced an install mode for the libaries used in order to allow installation from either branch, github release or conda - Added a cate-xcube image configuration to combine   cate and xcube

--- a/.env
+++ b/.env
@@ -2,8 +2,18 @@ MINICONDA_VERSION=4.8.2
 JUPYTER_VERSION=1.1.0
 
 CATE_BASE_VERSION=2.1.0
-CATE_VERSION=2.1.5
-CATE_APP_VERSION=2.2.2
+CATE_INSTALL_MODE=github
+CATE_VERSION=2.3.0.xcube.dev2
+CATE_APP_INSTALL_MODE=github
+#CATE_APP_VERSION=2.2.3
+CATE_APP_VERSION=2.3.0-xcube-dev.0
 CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=2.0.2
+CATE_DOCKER_VERSION=2.0.4
 
+XCUBE_INSTALL_MODE=github
+XCUBE_VERSION=0.8.0.dev2
+XCUBE_CCI_INSTALL_MODE=github
+XCUBE_CCI_VERSION=0.8.0.dev1
+
+
+PANGEO_BASE_NOTEBOOK_VERSION=2020.11.06
