Corrected cate-app version

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ CATE_INSTALL_MODE=github
 CATE_VERSION=2.3.0.xcube.dev3
 CATE_APP_INSTALL_MODE=github
 #CATE_APP_VERSION=2.2.3
-CATE_APP_VERSION=2.3.0.xcube.dev2
+CATE_APP_VERSION=2.3.0-xcube-dev.3
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=2.0.4
 
