- Removed pangeo image build for the moment. Fails on cate deps and is not used

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ CATE_APP_VERSION=2.3.0-xcube-dev.3
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=2.0.4
 
+ADD_XCUBE=0
 XCUBE_INSTALL_MODE=github
 XCUBE_VERSION=0.8.0.dev4
 XCUBE_CCI_INSTALL_MODE=github
