update to cate docker version 2.0.5

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ CATE_VERSION=2.3.0.xcube.dev6
 CATE_APP_INSTALL_MODE=github
 CATE_APP_VERSION=2.3.0-xcube-dev.4
 CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=2.0.4
+CATE_DOCKER_VERSION=2.0.5
 
 XCUBE_INSTALL_MODE=github
-XCUBE_VERSION=0.8.0.dev6
+XCUBE_VERSION=0.8.1
 XCUBE_CCI_INSTALL_MODE=github
-XCUBE_CCI_VERSION=0.8.0.dev1
+XCUBE_CCI_VERSION=0.8.0
 
 PANGEO_BASE_NOTEBOOK_VERSION=2020.11.06
