use cate 3.0.dev, removed cate-xcube as it is now included in cate

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 script:
   - docker-compose build cate-base
   - docker-compose build cate
-  - docker-compose build cate-xcube
+  - docker-compose build cate-xcube-cci
   - docker-compose build cate-jupyter
 #  - docker-compose build cate-pangeo
   - docker-compose build cate-app-stage
