--- a/.env
+++ b/.env
@@ -3,14 +3,12 @@ JUPYTER_VERSION=1.1.0
 
 CATE_BASE_VERSION=2.1.0
 CATE_INSTALL_MODE=github
-CATE_VERSION=2.3.0.xcube.dev6
+CATE_VERSION=3.0.0.dev0
 CATE_APP_INSTALL_MODE=github
-CATE_APP_VERSION=2.3.0-xcube-dev.4
+CATE_APP_VERSION=3.0.0-dev.0
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=2.0.5
 
-XCUBE_INSTALL_MODE=github
-XCUBE_VERSION=0.8.1
 XCUBE_CCI_INSTALL_MODE=github
 XCUBE_CCI_VERSION=0.8.0
 
