--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 MINICONDA_VERSION=4.8.2
-JUPYTER_VERSION=1.1.0
+JUPYTER_VERSION=1.1.3
 
 CATE_BASE_VERSION=2.1.0
 CATE_INSTALL_MODE=github
-CATE_VERSION=3.0.0.dev1
+CATE_VERSION=3.0.0
 CATE_APP_INSTALL_MODE=github
-CATE_APP_VERSION=3.0.0-dev.0
+CATE_APP_VERSION=3.0.0
 CATE_USER_NAME=cate
 CATE_DOCKER_VERSION=2.0.5
 
