- Ensured that .env is used in action - Removed all obsolete docker configs

--- a/.env
+++ b/.env
@@ -1,15 +1,7 @@
-MINICONDA_VERSION=4.8.2
-JUPYTER_VERSION=1.1.3
+JUPYTER_VERSION=hub-1.4.2
 
-CATE_BASE_VERSION=2.1.0
-CATE_INSTALL_MODE=github
-CATE_VERSION=3.0.0
-CATE_APP_INSTALL_MODE=github
-CATE_APP_VERSION=3.0.0
-CATE_USER_NAME=cate
-CATE_DOCKER_VERSION=2.0.5
+CATE_INSTALL_MODE=release
+CATE_VERSION=v3.0.0
 
-XCUBE_CCI_INSTALL_MODE=github
-XCUBE_CCI_VERSION=0.8.0
-
-PANGEO_BASE_NOTEBOOK_VERSION=2020.11.06
+XCUBE_CCI_VERSION=v0.9.0
+XCUBE_VERSION=v0.9.0
