--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: git-checkout
         uses: actions/checkout@v2
-      - name: get-dotenv
+      - name: load-dotenv
         id: dotenv
         uses: falti/dotenv-action@v0.2.7
       # Print some info
@@ -35,9 +35,6 @@ jobs:
           echo "XCUBE_VERSION: ${{ steps.dotenv.outputs.xcube_version }}"
           echo "XCUBE_CCI_VERSION: ${{ steps.dotenv.outputs.xcube_cci_version }}"
           echo "JUPYTER_VERSION: ${{ steps.dotenv.outputs.jupyter_version }}"
-      - name: get-dotenv
-        id: dotenv
-        uses: falti/dotenv-action@v0.2.7
       # Build and push docker image 'latest' to quay.io when the event is a 'push' and branch 'master'
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: cate-jh-build-push-docker-image-latest
