--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           echo "EVENT: ${{ github.event_name }}"
           echo "CATE_VERSION: ${{ steps.dotenv.outputs.cate_version }}"
+          echo "CATE_INSTALL_MODE: ${{ steps.dotenv.outputs.cate_install_mode }}"
           echo "XCUBE_VERSION: ${{ steps.dotenv.outputs.xcube_version }}"
           echo "XCUBE_CCI_VERSION: ${{ steps.dotenv.outputs.xcube_cci_version }}"
           echo "JUPYTER_VERSION: ${{ steps.dotenv.outputs.jupyter_version }}"
@@ -39,7 +40,7 @@ jobs:
           image: ${{ env.ORG_NAME }}/${{ env.APP_NAME }}
           tags: ${{ steps.dotenv.outputs.cate_version }}
           dockerfile: cate-jupyter.dockerfile
-          buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }}
+          buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }}
           registry: quay.io
           username: ${{ secrets.QUAY_DOCKER_REPO_USERNAME }}
           password: ${{ secrets.QUAY_DOCKER_REPO_PASSWORD }}
